--- a/css/custom-style.css
+++ b/css/custom-style.css
@@ -4,26 +4,44 @@
 
 
 }
-.col-md-8 {
-    width: 50%;
+
+
+nav.navbar a{
+    color:  white;
 }
 
-.col-md-4 {
-    width: 50%;
+.navbar-toggler {
+    padding: 0.25rem 0.75rem;
+    font-size: 1.25rem;
+    line-height: 1;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
 }
 
-.col-md-8 img {
-    width: 300px;
-    height: 300px;
+.navbar-light .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
-.row {
-    padding: 50px;
+
+.navbar-toggler-icon {
+    display: inline-block;
+    width: 1.5em;
+    height: 1.5em;
+    vertical-align: middle;
+    content: "";
+    background: no-repeat center center;
+    background-size: 100% 100%;
 }
 
-.col-md-4 article {
-    text-align: center; 
-    font-size: 20px; 
-    color: red; 
-    font-weight: 50px;
+
+#toggle-menu{
+   margin-left: 300px;
+}
+
+@media (min-width: 760px){
+    #toggle-menu{
+        display: none;
+        
+    }
 }
